--- a/Main/luaConsole.html
+++ b/Main/luaConsole.html
@@ -102,7 +102,7 @@
         }
 
         async function loadLuaFiles() {
-            await loadLocalLuaScript("inputProcesser.lua"); // change this url to the Lua file you wish to load, can be any local file's path, I.e. "await loadLocalLuaScript("MyFile.lua");"
+            await loadLocalLuaScript("inputProcesser.lua"); // change this url to the Lua file you wish to load, can be any local file's path, or a url, I.e. "await loadLocalLuaScript("https://raw.githubusercontent.com/ThatOneGuy2664/Lua-Web-Console/refs/heads/main/Main/inputProcesser.lua");"
         }
 
         loadLuaFiles();
