--- a/Main/luaConsole.html
+++ b/Main/luaConsole.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lua Web Console</title>
-    <script src="Fengari/fengari-web.js"></script>
+    <script src="fengari-web.js"></script>
     <style>
         body {
             font-family: monospace;
